--- a/apps/execution_node_editor/qss/nodeeditor-dark.qss
+++ b/apps/execution_node_editor/qss/nodeeditor-dark.qss
@@ -7,7 +7,7 @@ QMdiArea QTabBar,QMdiArea QTabWidget,QMdiArea QTabWidget::pane,QMdiArea QTabWidg
 QMdiArea QTabBar::tab:top:!selected,QMdiArea QTabBar::tab:top:selected,QMdiArea QTabBar::tab:top:!selected:hover{border-top-left-radius:4px;border-top-right-radius:4px;padding:2px 8px;padding-top:0;padding-bottom:3px;min-width:8ex;border:1px solid #EEEEEE;border-bottom:0}
 QMdiArea QTabBar::tab:top:!selected,QMdiArea QTabBar::tab:top:!selected:hover{background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,stop : 0 #C0C0C0,stop : .1 #EEEEEE,stop : .89 #EEEEEE,stop : 1 #EEEEEE)}
 QMdiArea QTabBar::tab:top:selected{background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,stop : 0 #FFFFFF,stop : .1 #FFFFFF,stop : .89 #FFFFFF,stop : 1 #FFFFFF)}
-QMdiArea QTabBar::tab:top:!selected:hover{background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,stop : 0 #EEEEEE,stop : .1 #EEEEEE,stop : .89 #EEEEEE,stop : 1 #EEEEEE)}
+QMdiArea QTabBar::tab:top:!selected:hover{background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,stop : 0 #FFFFFF,stop : .1 #FFFFFF,stop : .89 #FFFFFF,stop : 1 #FFFFFF)}
 QMdiArea QTabBar QToolButton{background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,stop : 0 #C0C0C0,stop : .1 #C0C0C0,stop : .89 #EEEEEE,stop : 1 #EEEEEE);border:1px solid #EEEEEE;border-radius:0}
 QMdiArea QTabBar QToolButton::left-arrow{image:url(":icons/small_arrow_left-light.png")}
 QMdiArea QTabBar QToolButton::right-arrow{image:url(":icons/small_arrow_right-light.png")}
